# nixgrep

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  flake.nix
src/: archive.rs  lock.rs  main.rs  map.rs  message.rs  meta.rs  scan.rs  search.rs
