[package]
name = "nixgrep"
version = "0.1.0"
edition = "2021"
description = "Pinpoint which flake input causes a given nixpkgs evaluation warning/trace"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help", "color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
grep = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
walkdir = "2"
anyhow = "1"
thiserror = "2"
termcolor = "1"

[profile.release]
opt-level = 2
lto = "thin"
strip = true